 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4852: Add accumulator implementation for MaxTupleBy1stField (szita via daijy)

PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4965: Refactor test/perf/pigmix/bin/runpigmix.pl to delete the output of single test case
  if we enable cleanup_after_test (kellyzly via daijy)

PIG-4966: Fix Pig compatibility with Hive 2.1.0 (zyork via daijy)

PIG-4935: TEZ_USE_CLUSTER_HADOOP_LIBS is always set to true (rohini)

PIG-4961: CROSS followed by LIMIT inside nested foreach drop data from result (rohini)

PIG-4960: Split followed by order by/skewed join is skewed in Tez (rohini)

PIG-4957: See "Received kill signal" message for a normal run after PIG-4921 (rohini)

PIG-4953: Predicate push-down will not run filters for single unary expressions (rdblue via daijy)

PIG-4940: Predicate push-down filtering unary expressions can be pushed (rdblue via daijy)

PIG-4938: [PiggyBank] XPath returns empty values when using aggregation method (nkollar via daijy)

PIG-4896: Param substitution ignored when redefined (knoguchi)

PIG-2315: Make as clause work in generate (daijy via knoguchi)

PIG-4921: Kill running jobs on InterruptedException (rohini)

PIG-4916: Pig on Tez fail to remove temporary HDFS files in some cases (daijy)

Release 0.16.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4945: Update document for conflicting macro params (knoguchi via daijy)
